Tue Jul 03 00:50:18 UTC 2007  Scott Harris  <harris_s@ociweb.com>

       *  DDS_release_notes.txt:

          Add a clarification.

        * DevGuideExamples/DCPS/Messenger/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:

          Update the example per DDS_release_notes.txt recommondations
          for switch from remote to local interfaces.

Mon Jul  2 22:36:05 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/DcpsIntegration/topic.cpp:

          Added sleep for 2 seconds to wait for all built in 
          datareaders to receive the add_associations from InfoRepo 
          before delete the subscriber. Otherwise the add_associations 
          will not add the remote_id to the transport mapping
          and the remove_associations will fail to find the remote id.

Mon Jul  2 22:05:48 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataReaderImpl.cpp:

          Added logging to help debugging association change.

Mon Jul  2 20:59:30 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest4_0/main.cpp:

          Corrected the view state to accommodate the view state changes
          for RT 10955.

        * tests/DCPS/FooTest4_0/run_test.pl:

          Made test DCPSInfoRepo default to not turn on ORBDebugLevel.

Sun Jul  1 20:46:40 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Updated to reflect new location of DevGuideExamples tests.

Sat Jun 30 16:28:26 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ViewState/main.cpp:

          Removed unused local variable.

Fri Jun 29 21:51:45 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListener.h:
        * DevGuideExamples/DCPS/Messenger/DataReaderListener.cpp:
          Removed unrequired methods.

        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:
          Change variable name to generic transport type.
